fix: collapse custom demo style

--- a/components/card/style/index.less
+++ b/components/card/style/index.less
@@ -3,7 +3,6 @@
 
 @card-prefix-cls: ~'@{ant-prefix}-card';
 @card-head-height: 48px;
-@card-hover-border: fade(@black, 9%);
 @card-action-icon-size: 16px;
 
 @gradient-min: fade(@card-skeleton-bg, 20%);
@@ -20,7 +19,6 @@
   &-hoverable {
     cursor: pointer;
     &:hover {
-      border-color: @card-hover-border;
       box-shadow: @card-shadow;
     }
   }
